# CECP

./: .gitignore  1p5x1p5_Layout.py  1x1_Layout.py  README.md  example.py  pyproject.toml
src/CECP/: array.py  base.py  builders.py  clearance.py  components.py  format.py  merge.py  operations.py  shapes.py
src/CECP/devices/: FeCAP.py  FeFET.py  HallBar.py  __init__.py  metal_lines.py  profiles.py  test.py
src/CECP/templates/: DWL_AlignmentMarks.gds  optical_markers.gds
src/CECP/utils/: __init__.py  fanout.py  helpers.py  klayout_macros.py
